[package]
name = "kuuubedit"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onig = { git = "https://github.com/rust-onig/rust-onig", rev = "fa90c0e97e90a056af89f183b23cd417b59ee6a2" }
clap = { version = "4.5.3", features = ["derive"] }
